# lattebot

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  autoreload.py  docker-compose.yaml  launcher.py  output.txt  pre_start.py  pyproject.toml  test14.py  translations.yaml
.github/workflows/: ci.yaml  lint.yml
lattebot/: __main__.py  chat_formatting.py  checks.py  embeds.py  logging.py  utils.py
lattebot/cogs/: events.py  jsk.py  test.py
lattebot/cogs/about/: __init__.py  main.py
lattebot/cogs/about/locales/en_US/: app_command.yaml  text.yaml
lattebot/cogs/about/locales/th/: app_command.yaml  text.yaml
lattebot/cogs/admin/: __init__.py  main.py
lattebot/cogs/admin/locales/en_US/: app_command.yaml
lattebot/cogs/admin/locales/th/: app_command.yaml
lattebot/cogs/events/: __init__.py  main.py
lattebot/cogs/help/: __init__.py  main.py  paginator.py
lattebot/core/: bot.py  cog.py  config.py  translator.py  tree.py
lattebot/tests/: conftest.py  test_chat_formatting.py  test_utils.py
lattebot/tests/core/: test_translator.py
lattebot/ui/: modal.py  view.py
tests/: conftest.py  test_utils.py
tests/core/: test_translator.py
