[project]
name = "lattebot"
version = "0.1.0"
description = "discord bot"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "STACiA", email = "stacia.dev@gmail.com" }]
license = { file = "LICENSE" }
dependencies = [
  "discord-py[speed]>=2.6.4, <2.7.0",
  "jishaku>=2.6.3, <3.0.0",
  "pydantic>2.0, <3.0.0",
  "pydantic-settings>=2.12.0, <3.0.0",
  "pyyaml>=6.0.3, <7.0.0",
  "anyio>=4.12.0, <5.0.0",
  "pygit2>=1.19.0, <2.0.0",
  "cchardet==2.2.0a2; python_version < '3.15'",
  "msgspec>=0.20.0, <1.0.0; python_version < '3.15'",
  "uvloop>=0.21.0; sys_platform != 'win32'"
]

[dependency-groups]
dev = [
  "mypy>=1.19.1, <1.20.0",
  "ruff>=0.14.9, <0.15.0",
  "pytest>=9.0.2, <10.0.0",
  "pytest-cov>=7.0.0, <8.0.0",
  "coverage>=7.10.7, <8.0.0",
  "types-pyyaml>=6.0, <7.0.0",
  "watchfiles>=v1.1.0, <1.2.0"
  # "ty>=0.0.1a10",
]

# [tool.uv.sources]
# discord-py = { git = "https://github.com/Rapptz/discord.py", rev = "master" }

[project.scripts]
lattebot = "lattebot.__main__:main"

[build-system]
requires = ["uv_build>=0.9.16, <0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
source-include = ["LICENSE"]

[tool.mypy]
strict = true
exclude = [".venv"]
python_version = "3.14"

[tool.ruff]
line-length = 120
target-version = "py314"
exclude = [
  ".git",
  ".ruff_cache",
  ".mypy_cache",
  ".pytest_cache",
  ".venv",
  ".vscode",
]

[tool.ruff.format]
preview = true
quote-style = "single"
skip-magic-trailing-comma = false

[tool.ruff.lint]
preview = true
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
  "N",  # pep8-naming
  "D",  # pydocstyle 

  "YTT",   # flake8-2020
  "ANN",   # flake8-annotations
  "ASYNC", # flake8-async
  "S",     # flake8-bandit
  "BLE",   # flake8-blind-except
  "A",     # flake8-builtins
  "COM",   # flake8-commas
  "DTZ",   # flake8-datetimez
  "T10",   # flake8-debugger
  "FA",    # flake8-future-annotations
  "ISC",   # flake8-implicit-str-concat
  "LOG",   # flake8-logging
  "G",     # flake8-logging-format
  "PIE",   # flake8-pie
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "RSE",   # flake8-raise 
  "RET",   # flake8-return
  "SIM",   # flake8-simplify
  "TC",    # flake8-type-checking
  "ARG",   # flake8-unused-arguments
  "PTH",   # flake8-use-pathlib

  "PGH",  # pygrep-hooks
  "PL",   # pylint
  "TRY",  # tryceratops
  "FLY",  # flynt
  "PERF", # perflint
  "FURB", # refurb

  "RUF", # ruff-specific rules

  # maybe enable later
  # "TID",   # flake8-tidy-imports
  # "ICN",   # flake8-import-conventions
]
ignore = [
  "ANN401",  # any-type
  "COM812",  # trailing-comma-missing
  "COM819",  # prohibited-trailing-comma
  "D100",    # undocumented-public-module
  "D101",    # undocumented-public-class
  "D102",    # undocumented-public-method
  "D103",    # undocumented-public-function
  "D104",    # undocumented-public-package
  "D105",    # undocumented-magic-method
  "D106",    # undocumented-public-nested-class
  "D107",    # undocumented-public-init
  "E501",    # line-too-long, handled by black
  "PLR6301", # no-self-use
  "TRY003",  # raise-vanilla-args
  "ISC001",  # single-line-implicit-string-concatenation, conflicts with black
]

[tool.ruff.lint.pyflakes]
extend-generics = ["discord.app_commands.CommandTree"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"lattebot/logging.py" = [
  "A005", # builtin-module-shadowing, allowed filename logging.py
]
"tests/**/*.py" = [
  "S101", # assert, allowed in tests 
]

[tool.coverage.report]
show_missing = true
precision = 2
sort = "-Cover"
exclude_also = ["if TYPE_CHECKING:"]

[tool.pytest.ini_options]
addopts = "-vv --showlocals --tb=short --strict -p no:warnings --cov=lattebot --cov=tests"
